--- a/public/style.css
+++ b/public/style.css
@@ -13,9 +13,12 @@
     color: black;
 }
 
-
-
+.tit{
+    margin: 10px;
+}
 /*justify-content: right;*/
+
+/*=====================================================================================================================*/
 * {
     margin: 0;
     padding: 0;
@@ -124,8 +127,8 @@ a{
     color: #FFFFFF;
 }
 
-.main-menu li:not(.no-active):hover::before, .main-menu li.active::before {
-    background-image: url(../img/menu-arrow.png);
+/*.main-menu li:not(.no-active):hover::before, .main-menu li.active::before {
+    background-image: url(files/img/menu-arrow.png);
     background-repeat: no-repeat;
     background-size: 15px 15px;
     display: block;
@@ -133,7 +136,8 @@ a{
     padding-bottom: 10px;
     background-position-x: center;
     content: "";
-}
+    color: #0E78AD;
+}*/
 
 
 #btn-login {
@@ -324,8 +328,8 @@ footer{
     color: #000;
 }
 
-.blog-body li:not(.no-active):hover::before, .blog-body li.active::before {
-    background-image: url(../img/menu-arrow.png);
+/*.blog-body li:not(.no-active):hover::before, .blog-body li.active::before {
+    background-image: url(files/img/menu-arrow.png);
     background-repeat: no-repeat;
     background-size: 15px 15px;
     display: block;
@@ -333,7 +337,7 @@ footer{
     padding-bottom: 10px;
     background-position-x: center;
     content: "";
-}
+}*/
 
 #btn-new-blog {
     background-color: #1193D6;
@@ -584,9 +588,9 @@ section {
 }
 
 .grid .trash{
-    width: 25px;
-    height: 25px;
-    margin-top: 20px;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 2px;
     cursor: pointer;
 }
 
@@ -673,6 +677,7 @@ form .txt_field{
     color: #a6a6a6;
     cursor: pointer;
 }
+
 
 .reg-error{
     margin: -5px 0 20px 5px;
