--- a/public/style.css
+++ b/public/style.css
@@ -618,13 +618,13 @@ section {
 form .txt_field{
     position: relative;
     border-bottom: 2px solid #adadad;
-    margin: 30px 0;
+    margin: 23px 0;
 }
 
 .txt_field input{
     width: 100%;
     padding: 0 5px;
-    height: 40px;
+    height: 28px;
     font-size: 16px;
     border: none;
     background: none;
@@ -644,7 +644,7 @@ form .txt_field{
 .txt_field span::before{
     content: '';
     position: absolute;
-    top: 40px;
+    top: 28px;
     left: 0;
     width: 0;
     height: 2px;
@@ -653,8 +653,9 @@ form .txt_field{
 }
 
 .txt_field input:focus ~ label, .txt_field input:valid ~ label{
-    top: -5px;
+    top: -10px;
     color: #2691d9;
+    margin-top: 2px;
 }
 
 .txt_field input:focus ~ span::before, .txt_field input:valid ~ span::before{
@@ -758,8 +759,6 @@ input[type="submit"]{
     padding: 3px 15px 3px 15px;
 }
 
-
-
 .blog-body-create .center{
     position: absolute;
     top: 62%;
@@ -775,7 +774,7 @@ input[type="submit"]{
 .blog-body-create .center h1{
     font-size: 20px;
     text-align: left;
-    padding-left: 20px;
+    /*padding-left: 20px;*/
 }
 
 .blog-body-create .center .left-side{
@@ -801,7 +800,6 @@ input[type="submit"]{
 .blog-body-create section {
     margin-left: 25%;
 }
-
 
 #create-short-text{
     width: 100%;
@@ -866,7 +864,7 @@ textarea{
 }
 
 .edit-skill [type="submit"] {
-    width: 39%;
+    width: 50%;
     height: 34px;
     border: 1px solid;
     background: #2691d9;
@@ -882,11 +880,11 @@ textarea{
 /*===========================================================================*/
 /*PRIDANIE PROJEKTU*/
 #addProject{
-    width: 30%;
+    width: 40%;
     height: 30px;
     font-size: 12px;
-    margin-top: 6px;
-    margin-bottom: 10px;
+    margin-top: 12px;
+    margin-bottom: 9px;
 }
 
 #btn-close {
@@ -895,7 +893,8 @@ textarea{
     color: #FFF;
     text-align: center;
     font-size: 12px;
-    padding: 8px 30px 8px 30px;
+    font-weight: 700;
+    padding: 7px 28px 7px 28px;
     border-radius: 25px;
     font-family: Helvetica, sans-serif;
 }
@@ -904,11 +903,17 @@ textarea{
     padding: 7px;
     color: white;
     text-align: center;
-    top: 19%;
+    top: 176px;
     left: 0%;
     right: 0%;
     position: fixed;
     z-index: 1;
+}
+
+.notification .alert p {
+    font-size: 17px;
+    margin-bottom: 0px;
+    padding-top: 0px;
 }
 
 .ale-err{
@@ -919,6 +924,19 @@ textarea{
     background-color: #50c878;
 }
 
+/*EDITOVANIE SKILLOV*/
+.edit-skill form{
+    margin-left: 8px;
+}
+
+.label-edit-profil{
+    color: #2691d9;
+}
+
+.adding-portfolio nav{
+    margin-top: 1%;
+    margin-bottom: 4%;
+}
 
 
 
@@ -983,8 +1001,8 @@ textarea{
     }
 
     .grid-item{
-        min-width: 270px;
-        min-height: 270px;
+        min-width: 200px;
+        min-height: 200px;
         max-width: 450px;
     }
 
@@ -1023,6 +1041,15 @@ textarea{
         padding-top: 18px;
         padding-bottom: 18px;
         margin-right: 60px;
+    }
+
+    .alert {
+        top: 126px;
+    }
+
+    .notification .alert p {
+        font-size: 13px;
+        margin-top: 2px;
     }
 
     /*DOMOV*/
@@ -1193,11 +1220,56 @@ textarea{
 
     .portfolio-page .grid-item{
         margin: 10px 0;
+        min-width: 175px;
     }
 
     /*ČLÁNOK*/
     .article-body h2{
         font-size: 15px;
+    }
+
+    /*PROFIL*/
+    .profil-body #first-section{
+        margin-top: 130px;
+    }
+
+    .profil-body .header-profil img{
+        width: 90px;
+        height: 90px;
+    }
+
+    .profil-body .header-title h1{
+        font-size: 28px;
+    }
+
+    .profil-body #btn-update-profil {
+        font-size: 12px;
+        padding: 3px;
+    }
+
+    .profil-body .p-subtitles {
+        font-size: 26px;
+    }
+
+
+
+    /*EDITOVANIE SKILLOV*/
+    .edit-skill [type="submit"] {
+        width: 65%;
+    }
+
+    /*EDITOVANIE PROFILU*/
+    .edit-profil .forms{
+        width: 80%;
+    }
+
+    /*PRIDANIE PROJEKTU*/
+    .adding-portfolio .forms{
+        width: 80%;
+    }
+
+    .adding-portfolio #first-section{
+        margin-top: 140px;
     }
 
 }
@@ -1248,6 +1320,16 @@ textarea{
         border-radius: 10px;
         font-size: 12px;
         padding: 4px;
+    }
+
+    .alert {
+        top: 85px;
+        padding: 1px;
+    }
+
+    .notification .alert p {
+        font-size: 12px;
+        margin-top: 2px;
     }
 
 
@@ -1349,6 +1431,7 @@ textarea{
 
     .blog-body p {
         font-size: 12px;
+        margin-left: 76px;
     }
 
     /*PRIHLÁSENIE*/
@@ -1372,8 +1455,13 @@ textarea{
     }*/
 
     .txt_field input{
-        height: 22px;
-        font-size: 12px;
+        height: 15px;
+        font-size: 11px;
+        margin-top: 0px;
+    }
+
+    .txt_field input:focus ~ label, .txt_field input:valid ~ label {
+        top: -5px;
     }
 
     .txt_field label{
@@ -1381,7 +1469,11 @@ textarea{
     }
 
     .txt_field span::before{
-        top: 22px;
+        top: 18px;
+    }
+
+    .reg-error {
+        font-size: 11px;
     }
 
 
@@ -1449,6 +1541,11 @@ textarea{
         font-size: 20px;
     }
 
+    .profil-body .header-profil img{
+        width: 75px;
+        height: 75px;
+    }
+
     /*PORTFOLIA*/
     .portfolio-page #first-section{
         margin-top: 120px;
@@ -1465,12 +1562,12 @@ textarea{
     }
 
     .portfolio-page img{
-        width: 80px;
-        height: 80px;
+        width: 65px;
+        height: 65px;
     }
 
     .portfolio-page .grid-item{
-        min-width: 100px;
+        min-width: 85px;
         min-height: 50px;
     }
 
@@ -1495,7 +1592,7 @@ textarea{
 
     .registration-body h3{
         font-size: 12px;
-        margin-bottom: 5px;
+        margin-bottom: 1px;
     }
 
     .registration-body input[type="submit"] {
@@ -1506,15 +1603,19 @@ textarea{
     }
 
     .center form{
-        padding-left: 6px;
+        padding: 5px 10px;
     }
 
     form .txt_field {
-        margin: 32px 0;
+        margin: 10px 0;
     }
 
     .registration-body .center .right-side {
         margin-top: 54px;
+    }
+
+    .registration-body .center form{
+
     }
 
     /*PÍSANIE BLOGU*/
@@ -1559,6 +1660,81 @@ textarea{
     .article-body h2{
         font-size: 13px;
     }
+
+    /*PROFIL*/
+    .profil-portfolio .grid p{
+        font-size: 13px;
+    }
+
+    .profil-body #first-section{
+        margin-top: 40px;
+    }
+
+    .profil-body #btn-update-profil {
+        font-size: 10px;
+        padding: 2px;
+    }
+
+    .profil-body .p-subtitles {
+        font-size: 22px;
+    }
+
+    .profil-body .header-title h1 {
+        font-size: 22px;
+    }
+
+
+
+    /*EDITOVANIE SKILLOV*/
+    .edit-skill [type="submit"] {
+        width: 80%;
+        height: 25px;
+        font-size: 12px;
+        margin-top: 10px;
+    }
+
+    .edit-skill h1{
+        padding-top: 40px;
+    }
+
+    .edit-skill #first-section {
+        margin-left: 82px;
+    }
+
+    .edit-skill from{
+        width: 70%;
+    }
+
+    /*UPRAVA PROFILU*/
+    input[type="file" i] {
+        font-size: 11px;
+    }
+
+    .label-edit-profil{
+        font-size: 12px;
+    }
+
+    #btn-delete-profil {
+        font-size: 11px;
+        padding: 4px;
+        margin-top: 5px;
+        margin-bottom: 10px;
+    }
+
+    /*PRIDANIE PROJEKTU*/
+    .adding-portfolio #btn-cancel-creating-blog{
+        font-size: 10px;
+    }
+
+    #addProject {
+        height: 23px;
+        font-size: 10px;
+    }
+
+    .adding-portfolio #first-section {
+        margin-top: 88px;
+    }
+
 }
 /*=======================================================================*/
 
