--- a/public/style.css
+++ b/public/style.css
@@ -618,7 +618,8 @@ section {
 form .txt_field{
     position: relative;
     border-bottom: 2px solid #adadad;
-    margin: 23px 0;
+    /*margin: 23px 0;*/
+    margin: 30px 0;
 }
 
 .txt_field input{
@@ -1205,6 +1206,13 @@ textarea{
         width: 300px;
         left:58%;
     }
+    .center form{
+        padding-left: 25px;
+    }
+
+    .center form {
+        padding: 0 25px;
+    }
 
     /*PORTFOLIA*/
     .portfolio-page #first-section{
@@ -1607,7 +1615,7 @@ textarea{
     }
 
     form .txt_field {
-        margin: 10px 0;
+        margin: 18px 0;
     }
 
     .registration-body .center .right-side {
